k8s/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-toolkit
  labels:
    app: devops-toolkit
    component: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-toolkit
      component: web
  template:
    metadata:
      labels:
        app: devops-toolkit
        component: web
    spec:
      containers:
      - name: devops-toolkit
        image: vfarcic/devops-toolkit-series:5.0.5
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
