k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devops-toolkit
  name: devops-toolkit
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: devops-toolkit
status:
  loadBalancer: {}
